infrastructure/kubeflow/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow
  labels:
    app.kubernetes.io/part-of: kubeflow
    control-plane: kubeflow
